think i fixed the height spacing problem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,6 @@ body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.6;
   margin: 0;
-  min-height: 100vh;
 }
 ul {
   margin: 0;
@@ -98,6 +97,7 @@ a {
   padding-bottom: 0.5em;
   border: 1px solid #a2a2a2;
   background-color: #f4f4f4;
+  height: 100%;
 }
 
 .footer-container {
@@ -112,12 +112,12 @@ a {
 
 .center-container {
   width: 100%;
-  min-height: calc(100vh - 149px);
-  max-height: fit-content;
+  min-height: calc(100vh - 135px);
   display: flex;
   justify-content: center;
   background-color: #ccffff;
 }
+
 
 .card {
   margin: 16px auto;
@@ -269,7 +269,5 @@ need media query to shrink the page if required
   .header {
     flex-direction: row;
     justify-content: space-between;
-    position: sticky;
-    top: 0;
   }
 }
